# IDL_S3

./: CMakeLists.txt  Draft  logdraft.md  sdkconfig  sdkconfig.old
components/cc/: CMakeLists.txt
components/cc/cc/: cc_http.c  cc_tmr_task.c
components/cc/cc/include/: cc_err.h  cc_tmr_task.h
components/cc/port/: cc_hal_ble.c  cc_hal_kvs.c  cc_hal_os.c
components/cc/port/include/: cc_hal_kvs.h  cc_hal_network.h  cc_hal_wifi.h
components/flexible_button/: CMakeLists.txt  flexible_button.c
components/flexible_button/include/: flexible_button.h
components/http_client/: CMakeLists.txt  http_wrapper.c
components/http_client/http/: README.md  package.yaml
components/http_client/http/example/: http_example.c
components/http_client/http/include/: http_client.h
components/rbuffer/: CMakeLists.txt
components/rbuffer/rbuffer/: LICENSE  README.md  example.cpp
components/usb/usb_stream/: usb_stream.c
main/: CMakeLists.txt  frame_parser.c  frame_parser.h  get_time.c  get_time.h  idf_component.yml  main.c  product.c  product.h
main/gs/: gs_bind.c  gs_device.c  gs_main.c  gs_mqtt.c  gs_wifi.c  img_upload.c
main/gs/include/: gs_device.h  gs_mqtt.h  img_upload.h
main/gs_img/: uvc_camera.c
main/gs_img/include/: img_upload.h  uvc_camera.h
main/uart/: cc_event_reset.c  img_transfer.c  msg_upload.c  net_sta.c  net_uart_comm.c  state_report.c  uart_comm.c  uart_config.c  unlock.c
main/uart/include/: cc_event_reset.h  img_transfer.h  msg_upload.h  net_sta.h  net_uart_comm.h  state_report.h  uart_comm.h  uart_config.h  unlock.h
(+11 files in other folders)
